---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  <<x:utf8_codepoint, \"Gleam\":utf8>>\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  <<x:utf8_codepoint, "Gleam":utf8>>
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../gleam.d.mts";

export function go(x: _.UtfCodepoint): _.BitArray;
